<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vector"
    tools:context="com.taskmuse.app.ui.fragment.authentication.Login_Fragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:paddingStart="20dp"
        android:paddingEnd="100dp"
        android:text="@string/login_text"
        android:textColor="@color/seed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInput"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintBottom_toTopOf="@+id/PasswordInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
            app:layout_constraintStart_toStartOf="@+id/loginTitle"
            app:layout_constraintEnd_toEndOf="@+id/loginTitle"
            app:layout_constraintBottom_toTopOf="@+id/PasswordInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInput"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput"
        app:layout_constraintStart_toStartOf="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="@+id/EmailInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/EmailInput"
            app:layout_constraintStart_toStartOf="@+id/EmailInput"
            app:layout_constraintEnd_toEndOf="@+id/EmailInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ForgotPasswordLink"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_marginEnd="4dp"
        android:text="@string/forgot_password_login_view"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/RegisterButtonLink"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:text="@string/new_here_register_button_on_login_view"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/LoginBtn"
        app:layout_constraintEnd_toStartOf="@+id/LoginBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/LoginBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_margin="10sp"
        android:text="@string/login"
        android:textSize="21sp"
        android:textColor="@color/md_theme_light_onPrimary"
        app:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/md_theme_light_onPrimary"
        app:rippleColor="?attr/colorOnSurface"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
        app:layout_constraintVertical_bias="0.898" />



</androidx.constraintlayout.widget.ConstraintLayout>