<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_vector"
    tools:context=".ui.fragment.authentication.ForgotPasswordHasAccessFragment">

    <TextView
        android:id="@+id/resetPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:paddingStart="20dp"
        android:paddingEnd="100dp"
        android:text="@string/reset_password"
        android:textColor="@color/seed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInput"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/resetPassTitle"
        app:layout_constraintStart_toStartOf="@+id/resetPassTitle"
        app:layout_constraintEnd_toEndOf="@+id/resetPassTitle"
        app:layout_constraintBottom_toTopOf="@+id/PasswordInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/resetPassTitle"
            app:layout_constraintStart_toStartOf="@+id/resetPassTitle"
            app:layout_constraintEnd_toEndOf="@+id/resetPassTitle"
            app:layout_constraintBottom_toTopOf="@+id/PasswordInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInput"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput"
        app:layout_constraintStart_toStartOf="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="@+id/EmailInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/EmailInput"
            app:layout_constraintStart_toStartOf="@+id/EmailInput"
            app:layout_constraintEnd_toEndOf="@+id/EmailInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordInputRepeat"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
        app:layout_constraintStart_toStartOf="@+id/PasswordInput"
        app:layout_constraintEnd_toEndOf="@+id/PasswordInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
            app:layout_constraintStart_toStartOf="@+id/PasswordInput"
            app:layout_constraintEnd_toEndOf="@+id/PasswordInput"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_margin="10sp"
        android:text="@string/reset_pass_btn"
        android:textSize="21sp"
        android:textColor="@color/md_theme_light_onPrimary"
        app:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/md_theme_light_onPrimary"
        app:rippleColor="?attr/colorOnSurface"
        app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput"
        app:layout_constraintVertical_bias="0.898" />



</androidx.constraintlayout.widget.ConstraintLayout>